--- a/requirements.in
+++ b/requirements.in
@@ -2,7 +2,7 @@ sphinx>=4.2,<4.3
 sphinx-intl[transifex]
 sphinx_rtd_theme
 sphinxcontrib-opendataservices-jsonschema
-sphinxcontrib-opendataservices
+sphinxcontrib-opendataservices==0.5.0
 -e git+https://github.com/openownership/data-standard-sphinx-theme.git@master#egg=standard_theme
 ocds-babel
 urllib3>=1.23
