--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,8 @@
-sphinx>=4.2,<4.3
+sphinx
 sphinx-intl[transifex]
-sphinx_rtd_theme
+sphinx_rtd_theme<=2.0.0
 sphinxcontrib-opendataservices-jsonschema
-sphinxcontrib-opendataservices==0.5.0
+sphinxcontrib-opendataservices
 -e git+https://github.com/openownership/data-standard-sphinx-theme.git@master#egg=standard_theme
 ocds-babel
 urllib3>=1.23
