Schema: add missing titles and descriptions

--- a/schema/components.json
+++ b/schema/components.json
@@ -2,6 +2,8 @@
   "$id": "urn:components",
   "$schema": "https://json-schema.org/draft/2020-12/schema",
   "$comment": "This file contains generic components which are used in multiple places throughout the BODS schema. Components used only in Statement or one type of Record should be defined in their respective files.",
+  "title": "Components",
+  "description": "Types of object that can be used via $ref throughout the BODS schema.",
   "version": "0.4",
   "$defs": {
     "Address": {
