Tests: Apply suggestions from code review

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
 exclude=build,.git,.ve,.hypothesis
-ignore=E123,E128,E265,W601,W293
+ignore=E123,E128,E265,W503,W601,W293
 max-line-length = 119
 
