Revert "removing placeOfBirth as an option for person/address"
This reverts commit c684a8af1c380e548fab3590e2edb2e7e148bab8.

--- a/schema/components.json
+++ b/schema/components.json
@@ -16,6 +16,7 @@
           "description": "What type of address is this? See the addressType codelist.",
           "type": "string",
           "enum": [
+            "placeOfBirth",
             "residence",
             "registered",
             "service",
