--- a/schema/components.json
+++ b/schema/components.json
@@ -193,7 +193,7 @@
         },
         "url": {
           "title": "Source URL",
-          "description": "If this information was fetched from an external URL, or a machine or human readable web page is available that provides additional information on how this statement was sourced, provide the URL.",
+          "description": "The external URL from which this information was fetched, if relevant. Or, if relevant, a URL providing additional detail on how this information was sourced.",
           "type": "string",
           "format": "uri"
         },
