--- a/schema/components.json
+++ b/schema/components.json
@@ -199,7 +199,7 @@
         },
         "retrievedAt": {
           "title": "Retrieved At",
-          "description": "A timestamp indicating when this statement was imported from an external system, in YYYY-MM-DDTHH:MM:SS or YYYY-MM-DD format. (The statementDate should be set based on the source information.)",
+          "description": "A timestamp indicating when this information was imported from an external system, in full-date (YYYY-MM-DD) or date-time (e.g. YYYY-MM-DDTHH:MM:SSZ) format. See the IETF RFC3339 standard, section 5.6.",
           "type": "string",
           "anyOf": [
             {
