--- a/.tx/config
+++ b/.tx/config
@@ -1,189 +1,251 @@
 [main]
 host = https://www.transifex.com
 
-[bods-main.codelist]
-file_filter = docs/locale/<lang>/LC_MESSAGES/codelist.po
-source_file = docs/_build/gettext/codelist.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:about--credits]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/about/credits.po
+source_file            = docs/_build/gettext/about/credits.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.index]
-file_filter = docs/locale/<lang>/LC_MESSAGES/index.po
-source_file = docs/_build/gettext/index.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:about--governance]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/about/governance.po
+source_file            = docs/_build/gettext/about/governance.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema.po
-source_file = docs/_build/gettext/schema.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:about--index]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/about/index.po
+source_file            = docs/_build/gettext/about/index.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.svg]
-file_filter = docs/locale/<lang>/LC_MESSAGES/svg.po
-source_file = docs/_build/gettext/svg.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:about--privacy-notice]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/about/privacy-notice.po
+source_file            = docs/_build/gettext/about/privacy-notice.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.about--credits]
-file_filter = docs/locale/<lang>/LC_MESSAGES/about/credits.po
-source_file = docs/_build/gettext/about/credits.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:codelist]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/codelist.po
+source_file            = docs/_build/gettext/codelist.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.about--governance]
-file_filter = docs/locale/<lang>/LC_MESSAGES/about/governance.po
-source_file = docs/_build/gettext/about/governance.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:examples--index]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/examples/index.po
+source_file            = docs/_build/gettext/examples/index.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.about--index]
-file_filter = docs/locale/<lang>/LC_MESSAGES/about/index.po
-source_file = docs/_build/gettext/about/index.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:index]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/index.po
+source_file            = docs/_build/gettext/index.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.about--privacy-notice]
-file_filter = docs/locale/<lang>/LC_MESSAGES/about/privacy-notice.po
-source_file = docs/_build/gettext/about/privacy-notice.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:primer--index]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/primer/index.po
+source_file            = docs/_build/gettext/primer/index.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.examples--index]
-file_filter = docs/locale/<lang>/LC_MESSAGES/examples/index.po
-source_file = docs/_build/gettext/examples/index.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:primer--whatdoesbodscover]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/primer/whatdoesbodscover.po
+source_file            = docs/_build/gettext/primer/whatdoesbodscover.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.primer--index]
-file_filter = docs/locale/<lang>/LC_MESSAGES/primer/index.po
-source_file = docs/_build/gettext/primer/index.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:primer--whatisbo]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/primer/whatisbo.po
+source_file            = docs/_build/gettext/primer/whatisbo.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.primer--whatdoesbodscover]
-file_filter = docs/locale/<lang>/LC_MESSAGES/primer/whatdoesbodscover.po
-source_file = docs/_build/gettext/primer/whatdoesbodscover.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:primer--whatisbodata]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/primer/whatisbodata.po
+source_file            = docs/_build/gettext/primer/whatisbodata.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.primer--whatisbo]
-file_filter = docs/locale/<lang>/LC_MESSAGES/primer/whatisbo.po
-source_file = docs/_build/gettext/primer/whatisbo.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:primer--whatisthebods]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/primer/whatisthebods.po
+source_file            = docs/_build/gettext/primer/whatisthebods.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.primer--whatisbodata]
-file_filter = docs/locale/<lang>/LC_MESSAGES/primer/whatisbodata.po
-source_file = docs/_build/gettext/primer/whatisbodata.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:primer--whyisbo]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/primer/whyisbo.po
+source_file            = docs/_build/gettext/primer/whyisbo.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.primer--whatisthebods]
-file_filter = docs/locale/<lang>/LC_MESSAGES/primer/whatisthebods.po
-source_file = docs/_build/gettext/primer/whatisthebods.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema.po
+source_file            = docs/_build/gettext/schema.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.primer--whyisbo]
-file_filter = docs/locale/<lang>/LC_MESSAGES/primer/whyisbo.po
-source_file = docs/_build/gettext/primer/whyisbo.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--changelog]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/changelog.po
+source_file            = docs/_build/gettext/schema/changelog.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--changelog]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/changelog.po
-source_file = docs/_build/gettext/schema/changelog.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--concepts]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/concepts.po
+source_file            = docs/_build/gettext/schema/concepts.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--concepts]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/concepts.po
-source_file = docs/_build/gettext/schema/concepts.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--conformance]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/conformance.po
+source_file            = docs/_build/gettext/schema/conformance.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--conformance]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/conformance.po
-source_file = docs/_build/gettext/schema/conformance.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--functional-requirements]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/functional-requirements.po
+source_file            = docs/_build/gettext/schema/guidance/functional-requirements.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--index]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/index.po
-source_file = docs/_build/gettext/schema/index.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--identifiers]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/identifiers.po
+source_file            = docs/_build/gettext/schema/guidance/identifiers.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--reference]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/reference.po
-source_file = docs/_build/gettext/schema/reference.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--index]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/index.po
+source_file            = docs/_build/gettext/schema/guidance/index.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--schema-browser]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/schema-browser.po
-source_file = docs/_build/gettext/schema/schema-browser.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--languages]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/languages.po
+source_file            = docs/_build/gettext/schema/guidance/languages.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--functional-requirements]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/functional-requirements.po
-source_file = docs/_build/gettext/schema/guidance/functional-requirements.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--provenance]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/provenance.po
+source_file            = docs/_build/gettext/schema/guidance/provenance.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--identifiers]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/identifiers.po
-source_file = docs/_build/gettext/schema/guidance/identifiers.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--repr-beneficial-ownership]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/repr-beneficial-ownership.po
+source_file            = docs/_build/gettext/schema/guidance/repr-beneficial-ownership.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--index]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/index.po
-source_file = docs/_build/gettext/schema/guidance/index.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--repr-state-owned-enterprises]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/repr-state-owned-enterprises.po
+source_file            = docs/_build/gettext/schema/guidance/repr-state-owned-enterprises.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--languages]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/languages.po
-source_file = docs/_build/gettext/schema/guidance/languages.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--serialization]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/serialization.po
+source_file            = docs/_build/gettext/schema/guidance/serialization.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--provenance]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/provenance.po
-source_file = docs/_build/gettext/schema/guidance/provenance.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--statement-identifiers]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/statement-identifiers.po
+source_file            = docs/_build/gettext/schema/guidance/statement-identifiers.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--repr-beneficial-ownership]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/repr-beneficial-ownership.po
-source_file = docs/_build/gettext/schema/guidance/repr-beneficial-ownership.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--guidance--updating-data]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/guidance/updating-data.po
+source_file            = docs/_build/gettext/schema/guidance/updating-data.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--repr-state-owned-enterprises]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/repr-state-owned-enterprises.po
-source_file = docs/_build/gettext/schema/guidance/repr-state-owned-enterprises.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--index]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/index.po
+source_file            = docs/_build/gettext/schema/index.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--serialization]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/serialization.po
-source_file = docs/_build/gettext/schema/guidance/serialization.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--reference]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/reference.po
+source_file            = docs/_build/gettext/schema/reference.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--statement-identifiers]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/statement-identifiers.po
-source_file = docs/_build/gettext/schema/guidance/statement-identifiers.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:schema--schema-browser]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/schema/schema-browser.po
+source_file            = docs/_build/gettext/schema/schema-browser.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
-[bods-main.schema--guidance--updating-data]
-file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/updating-data.po
-source_file = docs/_build/gettext/schema/guidance/updating-data.pot
-source_lang = en
-type = PO
+[o:OpenDataServices:p:bods-main:r:svg]
+file_filter            = docs/locale/<lang>/LC_MESSAGES/svg.po
+source_file            = docs/_build/gettext/svg.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
 
