docs/standard/reference.rst: Add allowurnrefs

--- a/requirements.txt
+++ b/requirements.txt
@@ -96,7 +96,8 @@ sphinxcontrib-jsmath==1.0.1
     # via sphinx
 sphinxcontrib-opendataservices==0.5.0
     # via -r requirements.in
-sphinxcontrib-opendataservices-jsonschema==0.6.1
+#sphinxcontrib-opendataservices-jsonschema==0.6.1
+sphinxcontrib-opendataservices-jsonschema @ git+https://github.com/OpenDataServices/sphinxcontrib-opendataservices-jsonschema@handle_urns
     # via
     #   -r requirements.in
     #   sphinxcontrib-opendataservices
