--- a/requirements.txt
+++ b/requirements.txt
@@ -96,8 +96,7 @@ sphinxcontrib-jsmath==1.0.1
     # via sphinx
 sphinxcontrib-opendataservices==0.5.0
     # via -r requirements.in
-#sphinxcontrib-opendataservices-jsonschema==0.6.1
-sphinxcontrib-opendataservices-jsonschema @ git+https://github.com/OpenDataServices/sphinxcontrib-opendataservices-jsonschema@handle_urns
+sphinxcontrib-opendataservices-jsonschema==0.7.0
     # via
     #   -r requirements.in
     #   sphinxcontrib-opendataservices
