--- a/requirements.in
+++ b/requirements.in
@@ -3,7 +3,7 @@ sphinx-intl
 sphinx_rtd_theme<=2.0.0
 sphinxcontrib-opendataservices-jsonschema
 sphinxcontrib-opendataservices
--e git+https://github.com/openownership/data-standard-sphinx-theme.git@master#egg=standard_theme
+-e git+https://github.com/openownership/data-standard-sphinx-theme.git@master-0.4#egg=standard_theme
 ocds-babel
 urllib3>=1.23
 requests>=2.21.0
