--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,10 @@
 # Required
 version: 2
 
+# Include docson submodule
+submodules:
+  include: all
+
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-22.04
