Build: include submodules for docson

--- a/.github/workflows/docsbuild.yml
+++ b/.github/workflows/docsbuild.yml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: 'true'
     - name: Setup python
       uses: actions/setup-python@v2
       with:
